--- a/SuperHero/src/main/resources/templates/index.html
+++ b/SuperHero/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
 <div class="container-fluid text-center mt-5">
 
-    <h1><a class="text-decoration-none text-primary" href="map.html">Access to the map</a></h1>
+    <h1><a class="text-decoration-none text-primary" th:href="@{/map}">Access to the map</a></h1>
     <br/>
     <h2><a class="text-decoration-none text-secondary" th:href="@{/heroes}">You are a Super Hero ?</a></h2>
 
